--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,12 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.git*/
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
+/cypress/videos
+/cypress/screenshots
 
 # production
 /build
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+dev-tools.local.js
