--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "bookshelf",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://the-react-bookshelf-exercises-04-authentication.netlify.app/",
+  "homepage": "https://the-react-bookshelf.netlify.app/",
   "engines": {
     "node": ">=12",
     "npm": ">=6"
@@ -67,7 +67,8 @@
     "lint": "eslint . --cache-location node_modules/.cache/eslint",
     "format": "prettier --write \"**/*.+(js|json|css|md|mdx|html)\"",
     "setup": "node ./scripts/setup",
-    "validate": "npm-run-all --parallel lint test:coverage build"
+    "validate-exercises": "node ./scripts/validate-exercises",
+    "validate": "npm-run-all --parallel lint test:coverage test:e2e:run validate-exercises"
   },
   "eslintConfig": {
     "extends": "react-app"
