--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,11 +12,9 @@
 /build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
