--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,9 +12,11 @@
 /build
 
 # misc
-.env
-.env.development
-.env.production
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
