--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react-dropzone": "^11.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-toastify": "^6.0.8",
-    "reactstrap": "^8.5.1"
+    "reactstrap": "^8.5.1",
+    "semantic-ui-react": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
