--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -17,6 +17,7 @@
     "jszip": "^3.5.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "promise-mysql": "^4.1.3"
   }
 }
