--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,10 +46,7 @@ services:
   # API service settings
   api:
     container_name: picd-api
-    image: picd-api:beta-1.0
-    build:
-      context: ./api
-      dockerfile: Dockerfile.prod
+    image: docker.pkg.github.com/s3539822/picd-capstone/picd-api:beta-1.1
     depends_on:
       - mysql
     expose:
@@ -69,10 +66,7 @@ services:
   # Client service settings
   client:
     container_name: picd-client
-    image: picd-client:beta-1.0
-    build:
-      context: ./client
-      dockerfile: Dockerfile.prod
+    image: docker.pkg.github.com/s3539822/picd-capstone/picd-client:beta-1.1
     environment:
       <<: *common-variables
       REACT_APP_API_SERVER_ADDRESS: http://localhost:9000
