--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
   
   # API service settings
   api:
+    container_name: picd-api
+    image: docker.pkg.github.com/s3539822/picd-capstone/picd-api:beta-1.1
     build:
       context: ./api
       dockerfile: Dockerfile
@@ -66,6 +68,8 @@ services:
   
   # Client service settings
   client:
+    container_name: picd-client
+    image: docker.pkg.github.com/s3539822/picd-capstone/picd-client:beta-1.1
     build:
       context: ./client
       dockerfile: Dockerfile
