--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
   # API service settings
   api:
     container_name: picd-api
-    image: docker.pkg.github.com/s3539822/picd-capstone/picd-api:beta-1.1
+    image: picd-api:dev
     build:
       context: ./api
       dockerfile: Dockerfile
@@ -69,7 +69,7 @@ services:
   # Client service settings
   client:
     container_name: picd-client
-    image: docker.pkg.github.com/s3539822/picd-capstone/picd-client:beta-1.1
+    image: picd-client:dev
     build:
       context: ./client
       dockerfile: Dockerfile
