--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.1.0",
     "@emotion/core": "^10.0.28",
     "@emotion/style": "^0.8.0",
     "@reach/dialog": "^0.10.0",
