--- a/api/package.json
+++ b/api/package.json
@@ -13,9 +13,11 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jszip": "^3.5.0",
+    "jwks-rsa": "^1.10.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
